# scrab

./: .gitignore  Cargo.toml  README.md  fetch.py  wordlist2.txt
src/: lib.rs  main.rs  main3.rs  util.rs
src/ai/: data.rs  mod.rs  network.rs  training.rs
src/engine/: anchors.rs  gaddag.rs  mod.rs  moves.rs
src/game/: bag.rs  board.rs  mod.rs  rack.rs  tile.rs
src/ui/: board.rs  engine.rs  mod.rs
