[package]
name = "scrab"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = 3
lto = true
panic = "abort"
codegen-units = 1

[dependencies]
fst = "0.4.7"
lazy_static = "1.5.0"
macroquad = "0.4.14"
rand = "0.9.2"
# fst-gaddag = { git = "https://github.com/amedeedaboville/fst-gaddag.git" }
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.9.1", features = ["cuda"] }
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.9.1" }
bincode = "2.0.1"
smallvec = "1.15.1"
csv = "1.3.1"
serde = { version = "1.0.219", features = ["derive"] }
memmap2 = "0.9.8"
